# 28-Constellations

./: .gitignore  README.md  cppkrf_vector.txt  cpppassfcn_vector.txt  cppscan4ca_vector.txt
MapProc/: CalcDiagFromRec.m  CalcMapCoordOrigin.m  CalcMirDiagFromRec.m  CalcRecParam.m  CalcRelativeCoord.m  DrawLine.m  ModifyEdgeGreyValue.m  ModifyGreyValue.m  MouseDownAct.m  MouseSetRectange.m  MouseUpAct.m  YamlProc.m  correct.pgm  fac505_mdf.pgm  main.m  pgm2png.m  readme.txt
MapProc/map_deploy/: init.po  target.po
MapProc/map_mdf/: fac505_mdf.yaml
MapProc/map_nav/: 215_mdf.pgm  215_mdf.yaml  626_mdf.yaml  fac505_mdf.pgm  fac602_mdf.pgm  fac602_mdf.yaml  office602_mdf.pgm
MapProc/map_store/: 215.pgm  215.yaml  605_mdf.yaml  613.pgm  613.yaml  624.yaml  626.pgm  fac505.pgm  fac505.yaml  fac602.pgm  fac602.yaml  fac625.pgm  office602.pgm
MatPath/: main.m  mean5_3.m
MatRos/: Polar2Cart.m  TimerCallBack.m  main.m
aiv_monitor/: CMakeLists.txt  package.xml
aiv_monitor/msg/: Ipc.msg
aiv_monitor/src/: recv_battery.cpp  unit-test-server (no sub.c  unit-test-server.cpp
colibri_aiv/: CMakeLists.txt  CMakeLists.txt~  package.xml
colibri_aiv/include/: aiv_driver.h  colibri_aiv.h
colibri_aiv/launch/: colibri_driver.launch  colibri_driver_extend.launch
colibri_aiv/msg/: Bumper.msg  Ultrasonic.msg  collision.msg  ultrasonic.msg
colibri_aiv/src/: .colibri_aiv_extend.cpp.swp  colibri_aiv.cpp  colibri_aiv_extend.cpp  colibri_aiv_node.cpp  colibri_aiv_node.cpp~  colibri_extend_carto.cpp  driver.cpp  driver.cpp~  driver_carto.cpp
colibri_avoidence/: CMakeLists.txt  CMakeLists.txt~  package.xml
colibri_avoidence/config/tasklist/: task_1.yaml~
colibri_avoidence/include/: PID_controller.h  colibri_ca.h  colibri_ca.h~  colibri_local_nav.h  colibri_local_nav.h~  global_planner.h  protect.h  task_mgr.h
colibri_avoidence/launch/: import_task.launch~
colibri_avoidence/src/: PID_controller.cpp  approaching_point.cpp  colibri_action.cpp  colibri_aux.cpp  colibri_ca.cpp  colibri_ca.cpp~  colibri_ca.h~  colibri_ca_node.cpp  colibri_ca_node.cpp~  colibri_ca_vel.cpp~  colibri_local_nav.cpp  colibri_local_nav.cpp~  colibri_localnav.cpp~  fixedpoint_local_nav.cpp  follow_path_node.cpp  get_path_node.cpp  nav_to_multipoint.cpp  nav_to_point.cpp  path_plan_node.cpp  protect.cpp  safe_node.cpp  task_mgr.cpp  task_node.cpp
colibri_battery/: CMakeLists.txt  package.xml
colibri_battery/launch/: start.launch
colibri_battery/log/: bat_state.log.1
colibri_battery/msg/: Battery.msg
colibri_battery/scripts/: battery_pub.py  battery_pub_express.py  battery_pub_wood.py
colibri_crabnav/: CMakeLists.txt  package.xml
colibri_crabnav/config/tasklist/: 903_dbg_route.yaml  dbg_route.yaml  exp_route.yaml  hf910_dbg_route.yaml  task_1.yaml
colibri_crabnav/include/colibri_crabnav/: PID_controller.h  colibri_action.h  colibri_ca.h  colibri_local_nav.h  global_planner.h  nav_node_proc.h  node_proc.h  path_proc.h  protect.h  task_mgr.h
colibri_crabnav/launch/: import_task.launch
colibri_crabnav/path/: 903_path.yaml  gm903_routes.yaml  hf910_branch_map.yaml  hf910_routes.yaml  hf910_sp_nodes.yaml  path6.yaml  sz925_cut_sp_nodes.yaml  sz925_sp_nodes.yaml  sz927_mdf_cut_branch_map.yaml  sz927_mdf_cut_routes.yaml  sz928_mdf_cut_branch_map.yaml  sz929_mdf_cut_sp_nodes.yaml  sz929_mdf_cut_station.yaml  ych1008_mdf_cut_branch_map.yaml
colibri_crabnav/src/: PID_controller.cpp  colibri_action.cpp  colibri_ca.cpp  colibri_local_nav.cpp  crab_aux.cpp  crab_nav.cpp  global_planner.cpp  nav_node_proc.cpp  nav_to_multipoint.cpp  node_proc.cpp  path_proc.cpp  protect.cpp  rectangle_test.cpp  safe_node.cpp  task_mgr.cpp
colibri_description/: CMakeLists.txt  package.xml
colibri_description/config/: aiv_test.rviz  aiv_vel2odom.rviz  (+3 more)
colibri_host/: CMakeLists.txt  package.xml
colibri_hostpc/: CMakeLists.txt  package.xml
colibri_laser/: .cproject  .project  CMakeLists.txt  package.xml
colibri_manctrl/: CMakeLists.txt  package.xml
colibri_msgs/: CMakeLists.txt  package.xml
colibri_nav/: CMakeLists.txt  package.xml  savemap.sh
colibri_pathfinding/: CMakeLists.txt  package.xml
colibri_pathfinding/include/colibri_pathfinding/: map_proc.h  map_search.h  stlastar.h
colibri_pathfinding/launch/: fp_srv.launch  fp_srv_dbg.launch
colibri_pathfinding/maps/: 626_mdf.yaml  818floor_mdf.pgm  822hf_mdf.pgm  822hf_mdf.yaml  Dialate_Img.pgm  Gray_Image.pgm
colibri_pathfinding/path/: nodes.txt
colibri_pathfinding/src/: MapSearch.cpp  findpath.cpp  fp_srv.cpp  main.cpp  map_proc.cpp  rounting.cpp  simple_fp.cpp
colibri_pathproc/: CMakeLists.txt  package.xml
colibri_pathproc/include/colibri_pathproc/: path_proc.h
colibri_pathproc/launch/: path_handle.launch  pathproc.launch
colibri_pathproc/path/: path.yaml  path1.yaml  path2.yaml  path3.yaml  path4.yaml  path5.yaml  path7.yaml  sp_nodes.yaml
colibri_pathproc/routes/: hf910_routes.yaml  hf910_sp_nodes.yaml  sz925_cut_routes.yaml  sz925_routes.yaml  sz927_mdf_cut_sp_nodes.yaml  sz928_mdf_cut_routes.yaml  sz928_mdf_cut_sp_nodes.yaml  sz929_mdf_cut_routes.yaml  ych1008_mdf_cut_routes.yaml  ych1008_mdf_cut_sp_nodes.yaml
colibri_pathproc/src/: path_handle.cpp  path_proc.cpp  path_proc_test.cpp
colibri_rviz/: CMakeLists.txt  package.xml
colibri_screen/: CMakeLists.txt  package.xml
colibri_screen/msg/: Battery.msg  Screen.msg
colibri_screen/src/: send_battery.cpp  unit-test-server.cpp  unit-test.h
colibri_taskexe/: CMakeLists.txt  package.xml
colibri_taskexe/config/tasklist/: Task.yaml  task_1.yaml
colibri_taskexe/launch/: import_nav.launch  import_task.launch
colibri_taskexe/src/: import_nav.cpp  mult_goal_import.cpp  mult_goal_import.cpp~  single_goal.cpp  two_goal.cpp
colibri_tmpdbg/: CMakeLists.txt  package.xml
colibri_tmpdbg/include/colibri_tmpdbg/: kalman_filter.h  kalman_interface.h
colibri_tmpdbg/src/: extract_virtual_aivpose.cpp  kalman_filter.cpp  kalman_filter_test.cpp  kalman_interface.cpp  pub_constang.cpp  pub_constvel.cpp  pub_nav_state.cpp  pub_virtual_aivpose.cpp
colibri_ultra/: CMakeLists.txt  package.xml
(+167 files in other folders)
